service.yml
apiVersion: v1
kind: Service
metadata:
  name: microserviceoneapi-service
spec:
  selector:
    app: microserviceoneapi-label
  ports:
    - protocol: TCP
      port: 8080  # Servisin dışarıya açacağı port
      targetPort: 8080  # Container'ın dinleyeceği port
