ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deployment
spec:
  ingressClassName: nginx
  rules:
    - host: www.microserviceone.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microserviceoneapi-service
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: microserviceoneapi-service
                port:
                  number: 8080
